fix(ui): Duration / Date alignment

--- a/src/ui/EpisodesList/EpisodeItem.module.css
+++ b/src/ui/EpisodesList/EpisodeItem.module.css
@@ -21,6 +21,9 @@
 }
 
 .info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin: 0 16px;
 }
 
